add more funtionality in the home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>budget-travel-app</title>
+    <title>FairFare - Smart Budget Travel</title>
+    <meta name="description" content="FairFare is your AI-powered travel companion that tracks expenses, alerts you to unfair prices, and helps you find the best deals in real-time." />
   </head>
   <body>
     <div id="root"></div>
