add the logo of the site and change it from the top tab

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FairFare - Smart Budget Travel</title>
     <meta name="description" content="FairFare is your AI-powered travel companion that tracks expenses, alerts you to unfair prices, and helps you find the best deals in real-time." />
